--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build geoip.dat
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 22 * * 4"
+    - cron: "0 21 * * 1,4"
   push:
     branches:
       - master
@@ -12,6 +12,7 @@ on:
       - "LICENSE"
       - "README.md"
       - ".github/dependabot.yml"
+      - ".github/workflows/build.yml"
 jobs:
   build:
     name: Build
